# knucklebones-ml

./: .gitignore  README.md  main.py  matchup_statisctics.py  matchup_statistics.py  players.py  pyproject.toml  rawr.py  vscode_settings.json.example
examples/: agent_matchup_statistics.py  pvp_terminal_play.py
knucklebones/: __init__.py  ai_players.py  bots.py  game.py  players.py  ui.py
src/knucklebones_ml/: __init__.py  bots.py  ui.py
src/knucklebones_ml/_env/: __init__.py  core_logic.py  knucklebones_environment.py
src/knucklebones_ml/agents/: __init__.py  _base_class.py  _random_agent.py
src/knucklebones_ml/env/: __init__.py  core_logic.py  knucklebones_environment.py
src/knucklebones_ml/ui/: __init__.py  _base_class.py  _basic_terminal_renderer.py  _basic_terminal_ui.py
tests/: conftest.py  test_core_logic.py  test_pettingzoo_api.py  test_ui_baseclass.py  test_ui_terminalrenderer.py
tests/integration_tests/: test_core_logic_integrated.py  test_pettingzoo_api.py
tests/unit_tests/: test_core_logic.py
