[project]
name = "knucklebones_ml"
version = "0.1.0"
description = "Python implementation of Dice Game 'Knucklebones' from Cult of the Lamb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blessed>=1.30.0",
    "numpy>=2.4.2",
    "pettingzoo>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src"
strict = true
