[project]
name = "knucklebones_ml"
version = "0.1.0"
description = "Python implementation of Dice Game 'Knucklebones' from Cult of the Lamb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blessed>=1.30.0",
    "numpy>=2.4.2",
    "pettingzoo>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.ruff]
# Target Python version
target-version = "py312"
line-length = 88
# Choose which rules to enable (E = Error, F = Pyflakes, I = Import Sort)
lint.select = ["E", "F", "I", "PL"]

[tool.ruff.lint.isort]
known-first-party = ["knucklebones_ml"]

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]
strict = true
