[project]
name = "knucklebones_ml"
version = "0.1.0"
description = "Python implementation of Dice Game 'Knucklebones' from Cult of the Lamb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blessed>=1.30.0",
    "numpy>=2.4.2",
    "pettingzoo>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["RET504", "W293", "D212", "COM812", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["INP001", "ANN201", "D103", "D100", "S101", "ANN001"]

[tool.ruff.lint.isort]
known-first-party = ["knucklebones_ml"]

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]
strict = true
